# 01-hello

./: .gitignore  .travis.yml  CMakeLists.txt  README.md
02-1-sdl-dynamic/: CMakeLists.txt
02-1-sdl-dynamic-debug/: .gitignore  CMakeLists.txt
02-2-sdl-static/: CMakeLists.txt
02-2-sdl-static-debug/: CMakeLists.txt
03-1-sdl-loop/: CMakeLists.txt  main.cxx
03-3-sdl-loop-to-engine-dll/: CMakeLists.txt  engine.cxx  engine.hxx  game.cxx
04-0-render/: 00_canvas.cxx  00_canvas.hxx  01_line_render.cxx  01_line_render.hxx  01_line_render_main.cxx  02_triangle_render.cxx  02_triangle_render.hxx  02_triangle_render_main.cxx  03_triangle_render_indexed.cxx  03_triangle_render_indexed.hxx  03_triangle_render_indexed_main.cxx  04_triangle_render_interpolated.cxx  04_triangle_render_interpolated.hxx  04_triangle_render_interpolated_main.cxx  05-0-render-windowed.cxx  CMakeLists.txt  canvas.cxx  canvas.hxx  canvas_main.cxx  indexed_triangle_render.cxx  indexed_triangle_render.hxx  indexed_triangle_render_main.cxx  interpolared_triangle_render.cxx  interpolared_triangle_render.hxx  interpolateded_triangle_render.cxx  interpolateded_triangle_render.hxx  interpolateded_triangle_render_main.cxx  line_render.cxx  line_render.hxx  line_render_main.cxx  line_triangle_render.cxx  line_triangle_render.hxx  line_triangle_render_main.cxx  render-windowed.cxx
04-0-render-old/: .00_canvas.cxx.swp  00_canvas.hxx  00_canvas_main.cxx  02_triangle_render.cxx  03_triangle_render_indexed.hxx  03_triangle_render_indexed_main.cxx  04_triangle_render_interpolated.cxx  04_triangle_render_interpolated_main.cxx  05-0-render-windowed.cxx
04-1-opengl-minimal/: CMakeLists.txt  engine.cxx  main.cxx
04-2-opengl-triangle/: CMakeLists.txt  engine.cxx  engine.hxx  main.cxx
04-3-opengl-renderdoc/: CMakeLists.txt  engine.cxx  engine.hxx  main.cxx  vertexes.txt
04-3-opengl-renderdoc/glad/: glad.c  glad.h
05-1-vertex-morphing/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  engine.cxx  engine.hxx  main.cxx
05-2-texture-loading-m/: CMakeLists.txt  engine.cxx  engine.hxx  main.cxx
05-3-graphics-update_m/: CMakeLists.txt  engine.cxx  engine.hxx  main.cxx  shader_gl_es20.cxx  shader_gl_es20.hxx  texture_gl_es20.cxx  texture_gl_es20.hxx
06-1-matrix-and-vector_m/: CMakeLists.txt  color.cxx  engine.cxx  engine.hxx  main.cxx
06-2-m-shader-multiply-matrix/: CMakeLists.txt  color.hxx  engine.cxx  engine.hxx  main.cxx  vert_pos_color.txt
06-3-m-move-tank/: CMakeLists.txt  color.hxx  engine.cxx  engine.hxx  main.cxx  shader_gl_es20.cxx  shader_gl_es20.hxx  texture_gl_es20.cxx  texture_gl_es20.hxx
06-5-sprite-editor/: CMakeLists.txt  imgui.ini
06-5-sprite-editor/imgui-src/: CMakeLists.txt
07-01-sound/: CMakeLists.txt  main.cpp
algoritm/: CMakeLists.txt  algoritm.cxx
hello_lib/: CMakeLists.txt
hello_lib/include/: print.h
hello_lib/src/: print.cpp
opengl-triangle/: CMakeLists.txt  engine.cxx  engine.hxx  main.cxx  shader_gl_es20.cxx  shader_gl_es20.hxx  texture_gl_es20.cxx  texture_gl_es20.hxx  vert_tex_color.txt  vertex_buffer_impl.cxx  vertex_buffer_impl.hxx  vertexes.txt
opengl-triangle_old/: engine.cxx  main.cxx  shader_gl_es20.cxx  shader_gl_es20.hxx  vertex_buffer_impl.cxx
src/: main.cpp
try_tet/: CMakeLists.txt  engine.cxx  engine.hxx  field.cxx  field.hxx  main.cxx  texture_gl_es20.cxx  vertex_buffer_impl.cxx  vertex_buffer_impl.hxx
